--- a/index.html
+++ b/index.html
@@ -6,3 +6,50 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Food, LLC</a>
+  <button class="navbar-toggler d-none d-sm-block d-md-none d-block d-sm-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto d-none d-sm-block d-md-none d-block d-sm-none">
+      <li class="nav-item text-center">
+        <a class="nav-link" href="#">Chicken</a>
+      </li>
+      <li class="nav-item text-center">
+        <a class="nav-link" href="#">Beef</a>
+      </li>
+      <li class="nav-item text-center">
+        <a class="nav-link" href="#">Sushi</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container-fluid">
+  <section>
+    <header><h1 class="text-center">Our Menu</h1></header>
+  </section>
+  <section>
+    <div class="col-xs-12 bg-light menu-container">
+    <h2 class="text-center">Chicken</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vulputate ut pharetra sit amet aliquam id diam. Ante metus dictum at tempor commodo ullamcorper. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Hendrerit dolor magna eget est lorem ipsum dolor sit amet. Fermentum dui faucibus in ornare quam viverra orci. Sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Arcu dictum varius duis at consectetur lorem. Sapien pellentesque habitant morbi tristique senectus et. In nisl nisi scelerisque eu ultrices vitae auctor eu augue. Viverra ipsum nunc aliquet bibendum enim. In nibh mauris cursus mattis molestie a. Ultrices neque ornare aenean euismod. Cursus sit amet dictum sit amet. Tellus elementum sagittis vitae et leo duis ut diam. Integer quis auctor elit sed vulputate mi sit amet. Ut morbi tincidunt augue interdum velit euismod in. Varius duis at consectetur lorem donec. Ut eu sem integer vitae justo eget magna fermentum iaculis.
+      <br>
+      Urna duis convallis convallis tellus id. Urna molestie at elementum eu facilisis sed. Pellentesque habitant morbi tristique senectus et netus et. In fermentum et sollicitudin ac orci phasellus egestas tellus. Ac feugiat sed lectus vestibulum. Fringilla urna porttitor rhoncus dolor purus non enim praesent. Placerat orci nulla pellentesque dignissim enim sit. Senectus et netus et malesuada fames. In egestas erat imperdiet sed euismod nisi porta lorem. Interdum velit euismod in pellentesque massa placerat duis ultricies.
+
+      Felis eget velit aliquet sagittis id consectetur purus ut faucibus. Vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Duis convallis convallis tellus id. Eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar. Ut tellus elementum sagittis vitae et leo. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Viverra nam libero justo laoreet sit amet cursus sit amet. Integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus. Sapien pellentesque habitant morbi tristique senectus. Congue nisi vitae suscipit tellus mauris a diam. Vulputate sapien nec sagittis aliquam malesuada. Congue nisi vitae suscipit tellus mauris a diam. Faucibus a pellentesque sit amet. Sit amet risus nullam eget felis eget nunc. Venenatis cras sed felis eget velit aliquet sagittis id.
+
+      Sit amet justo donec enim diam vulputate ut pharetra. Neque egestas congue quisque egestas diam in. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Morbi tempus iaculis urna id. Neque volutpat ac tincidunt vitae semper. Lectus quam id leo in vitae turpis massa sed elementum. Quis viverra nibh cras pulvinar mattis nunc sed blandit. Volutpat ac tincidunt vitae semper quis lectus nulla at. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Quisque id diam vel quam elementum pulvinar. In hac habitasse platea dictumst quisque. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Convallis a cras semper auctor neque vitae tempus. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Pulvinar neque laoreet suspendisse interdum consectetur libero. Faucibus ornare suspendisse sed nisi. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Ultrices tincidunt arcu non sodales. Aliquet risus feugiat in ante metus dictum at tempor.
+
+      Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Nisi est sit amet facilisis. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci. Urna id volutpat lacus laoreet non. Volutpat
+      </p>
+    </div>
+  </section>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
