added padding to p element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ul>
   </div>
 </nav>
-<div class="container-fluid">
+<div class="container">
   <section>
     <header><h1 class="text-center">Our Menu</h1></header>
   </section>
